--- a/HTML/index.html
+++ b/HTML/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/임시_aside.css" />
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
@@ -25,168 +24,13 @@
       href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/aside.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script>
-      function dragOver(e) {
-        e.stopPropagation();
-        e.preventDefault();
-
-        if (e.type == "dragover") {
-          $(e.target).css({
-            "background-color": "black",
-            "outline-offset": "-20px",
-          });
-        } else {
-          $(e.target).css({
-            "background-color": "white",
-            "outline-offset": "-10px",
-          });
-        }
-      }
-
-      function uploadFiles(e) {
-        e.stopPropagation();
-        e.preventDefault();
-        console.log(e.dataTransfer);
-        console.log(e.originalEvent.dataTransfer);
-
-        e.dataTransfer = e.originalEvent.dataTransfer;
-
-        files = e.dataTransfer.files;
-        if (files.length > 1) {
-          alert("하나만 올려라.");
-          return;
-        }
-
-        if (files[0].type.match(/image.*/)) {
-          $("#modal_add_feed_content").css({
-            display: "flex",
-          });
-          $(".modal_image_upload_content").css({
-            "background-image":
-              "url(" + window.URL.createObjectURL(files[0]) + ")",
-            outline: "none",
-            "background-size": "contain",
-            "background-repeat": "no-repeat",
-            "background-position": "center",
-          });
-          $("#modal_add_feed").css({
-            display: "none",
-          });
-        } else {
-          alert("이미지가 아닙니다.");
-          return;
-        }
-      }
-
-      let num = 1;
-
-      function changePic(idx) {
-        if (idx) {
-        }
-      }
-
-      $(function () {
-        $("#search").on("click", function () {
-          $(".sidesearch").toggleClass("on");
-          $(".side").toggleClass("on");
-        });
-
-        let modal = $("#modal_add_feed");
-        let scroll = $(document).scrollTop();
-
-        console.log(scroll);
-        $("#add_feed").on("click", function () {
-          modal.css("top", scroll + "px");
-          modal.css("display", "flex");
-          $("body").css("overflow-y", "hidden");
-        });
-
-        $("#close_modal").on("click", function () {
-          modal.css("display", "none");
-          $("body").css("overflow-y", "visible");
-        });
-
-        $(".modal_image_upload")
-          .on("dragover", dragOver)
-          .on("dragleave", dragOver)
-          .on("drop", uploadFiles);
-
-        $("#file_upload").on("change", function () {
-          //alert('dfsf');
-          let file = this.files;
-          //let url = createObjectURL(file);
-          console.log("file : " + file);
-          let dataTransfer = new DataTransfer();
-
-          let fileArray = Array.from(file);
-          console.log("fileArray : " + fileArray);
-
-          fileArray.forEach((file) => {
-            dataTransfer.items.add(file);
-          });
-
-          let images = dataTransfer.files;
-          console.log(images);
-
-          if (images[0].type.match(/image.*/)) {
-            $("#modal_add_feed_content").css({
-              display: "flex",
-            });
-            $(".modal_image_upload_content").css({
-              "background-image":
-                "url(" + window.URL.createObjectURL(images[0]) + ")",
-              outline: "none",
-              "background-size": "contain",
-              "background-repeat": "no-repeat",
-              "background-position": "center",
-            });
-            $("#modal_add_feed").css({
-              display: "none",
-            });
-          } else {
-            alert("이미지가 아닙니다.");
-            return;
-          }
-        });
-
-        //게시글 업로드 버튼 클릭시(ajax추가하면 됨)
-        $("#button_write_feed").on("click", () => {
-          const image = $("#input_image")
-            .css("background-image")
-            .replace(/^url\(['"](.+)['"]\)/, "$1");
-          const content = $("#input_content").val();
-          const profile_image = $("#input_profile_image").attr("src");
-          const user_id = $("#input_user_id").text();
-
-          const file = files[0];
-
-          let fd = new FormData();
-
-          fd.append("file", file);
-          fd.append("image", image);
-          fd.append("content", content);
-          fd.append("profile_image", profile_image);
-          fd.append("user_id", user_id);
-
-          if (image.length <= 0) {
-            alert("이미지가 비어있습니다.");
-          } else if (content.length <= 0) {
-            alert("설명을 입력하세요");
-          } else if (profile_image.length <= 0) {
-            alert("프로필 이미지가 비어있습니다.");
-          } else if (user_id.length <= 0) {
-            alert("사용자 id가 없습니다.");
-          } else {
-            writeFeed(fd);
-            console.log(files[0]);
-          }
-        });
-      });
-    </script>
+    <script src="./js/aside.js"></script>
   </head>
 
   <body>
+    <!---- 사이드 ---->
     <aside class="sidebar">
       <header class="sidebar-header">
         <img class="logo-img" src="./img/photostagram_logo.png" />
@@ -221,7 +65,7 @@
           </a>
         </button>
 
-        <button>
+        <button id="alarm">
           <span>
             <i class="uil uil-heart"></i>
             <span>알림</span>
@@ -253,6 +97,7 @@
       </nav>
     </aside>
 
+    <!---- 클릭 시 나오는 버튼들 ---->
     <aside class="side">
       <header class="sidebar-header">
         <img
@@ -314,6 +159,7 @@
       </nav>
     </aside>
 
+    <!---- 검색 click ---->
     <div class="sidesearch">
       <div>
         <h2>검색</h2>
@@ -324,9 +170,10 @@
       <div>
         <h3>최근 검색 항목 <button>모두 지우기</button></h3>
       </div>
-      <div id="searchlist">
+
+      <div class="searchlist">
         <div>
-          <img src="./aside_seller_ico.PNG" alt="" />
+          <img src="./img/aside_seller_ico.PNG" alt="" />
         </div>
         <div>
           <div>
@@ -338,88 +185,216 @@
         </div>
         <div>
           <button>
-            <img src="./aside_x.PNG" alt="" />
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
           </button>
         </div>
       </div>
     </div>
 
-    <div id="modal_add_feed" class="modal modal_overlay">
-      <div class="modal_window">
-        <div class="modal_title">
-          <div class="modal_title_side"></div>
-          <div>새 게시물</div>
-          <div class="modal_title_side">
-            <span
-              id="close_modal"
-              class="close_modal material-icons-outlined"
-              style="font-size: 30px"
-            >
-              close
-            </span>
-          </div>
+    <!---- 알림 click ---->
+    <div class="sidealarm">
+      <div>
+        <h2>알림</h2>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
         </div>
-        <div class="modal_image_upload">
-          <button id="fileButton">
-            <label for="file_upload">컴퓨터에서 선택</label>
-            <input
-              type="file"
-              id="file_upload"
-              accept="image/*"
-              required
-              multiple
-            />
-          </button>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
         </div>
       </div>
-    </div>
-
-    <div id="modal_add_feed_content" class="modal modal_overlay_content">
-      <div class="modal_window">
-        <div class="modal_title">
-          <div class="modal_title_side"></div>
-          <div style="margin: 5px">새 게시물</div>
-          <div class="modal_title_side">
-            <span
-              id="close_modal"
-              class="close_modal material-icons-outlined"
-              style="font-size: 30px"
-            >
-              close
-            </span>
-          </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
         </div>
-        <div class="modal_image_content">
-          <div id="input_image" class="modal_image_upload_content">
-            <button onclick="changePic(0);">이전</button>
-            <button onclick="changePic(1);">다음</button>
-          </div>
-          <div class="modal_content_write">
-            <div class="feed_name">
-              <div class="profile_box">
-                <img id="input_profile_image" class="profile_img" src="#" />
-              </div>
-              <span id="input_user_id" class="feed_name_txt"> jin.99 </span>
-            </div>
-            <div style="height: 440px">
-              <textarea
-                id="input_content"
-                class="feed_content_textarea form-control col-sm-5"
-                rows="10"
-                placeholder="설명을 입력하세요..."
-              ></textarea>
-            </div>
-            <div style="width: 100%; text-align: center">
-              <button
-                id="button_write_feed"
-                type="button"
-                class="btn btn-primary"
-                style="width: 268px"
-              >
-                공유하기
-              </button>
-            </div>
-          </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
         </div>
       </div>
     </div>
@@ -928,4 +903,84 @@
       </section>
     </section>
   </body>
+
+  <div id="modal_add_feed" class="modal modal_overlay">
+    <div class="modal_window">
+      <div class="modal_title">
+        <div class="modal_title_side"></div>
+        <div>새 게시물</div>
+        <div class="modal_title_side">
+          <span
+            id="close_modal"
+            class="close_modal material-icons-outlined"
+            style="font-size: 30px"
+          >
+            close
+          </span>
+        </div>
+      </div>
+      <div class="modal_image_upload">
+        <button id="fileButton">
+          <label for="file_upload">컴퓨터에서 선택</label>
+          <input
+            type="file"
+            id="file_upload"
+            accept="image/*"
+            required
+            multiple
+          />
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div id="modal_add_feed_content" class="modal modal_overlay_content">
+    <div class="modal_window">
+      <div class="modal_title">
+        <div class="modal_title_side"></div>
+        <div style="margin: 5px">새 게시물</div>
+        <div class="modal_title_side">
+          <span
+            id="close_modal"
+            class="close_modal material-icons-outlined"
+            style="font-size: 30px"
+          >
+            close
+          </span>
+        </div>
+      </div>
+      <div class="modal_image_content">
+        <div id="input_image" class="modal_image_upload_content">
+          <button onclick="changePic(0);">이전</button>
+          <button onclick="changePic(1);">다음</button>
+        </div>
+        <div class="modal_content_write">
+          <div class="feed_name">
+            <div class="profile_box">
+              <img id="input_profile_image" class="profile_img" src="#" />
+            </div>
+            <span id="input_user_id" class="feed_name_txt"> jin.99 </span>
+          </div>
+          <div style="height: 440px">
+            <textarea
+              id="input_content"
+              class="feed_content_textarea form-control col-sm-5"
+              rows="10"
+              placeholder="설명을 입력하세요..."
+            ></textarea>
+          </div>
+          <div style="width: 100%; text-align: center">
+            <button
+              id="button_write_feed"
+              type="button"
+              class="btn btn-primary"
+              style="width: 268px"
+            >
+              공유하기
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </html>
