--- a/HTML/main.html
+++ b/HTML/main.html
@@ -24,10 +24,9 @@
       href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/aside.css">
+    <link rel="stylesheet" href="./css/aside.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="./js/aside.js"></script>
-      
   </head>
 
   <body>
@@ -37,18 +36,17 @@
         <i class="logo-icon uil uil-instagram"></i>
       </header>
       <nav>
-
         <button>
-            <a href="">
-              <i class="uil uil-estate"></i>
-              <span>홈</span>
-            </a>
+          <a href="">
+            <i class="uil uil-estate"></i>
+            <span>홈</span>
+          </a>
         </button>
 
         <button id="search">
           <span>
-              <i class="uil uil-search"></i>
-              <span>검색</span>
+            <i class="uil uil-search"></i>
+            <span>검색</span>
           </span>
         </button>
 
@@ -82,7 +80,9 @@
 
         <button>
           <span>
-            <img src="https://raw.githubusercontent.com/zouraiz523/Instagram-Sidebar-/b2750eba8fa31cde49364428bf28fbb41b3a02f0/Instagram%20Sidebar%20Coding/Profile.svg" />
+            <img
+              src="https://raw.githubusercontent.com/zouraiz523/Instagram-Sidebar-/b2750eba8fa31cde49364428bf28fbb41b3a02f0/Instagram%20Sidebar%20Coding/Profile.svg"
+            />
             <span>프로필</span>
           </span>
         </button>
@@ -167,250 +167,250 @@
       <div>
         <h3>최근 검색 항목 <button>모두 지우기</button></h3>
       </div>
-      
-      <div class="searchlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-          <div>
-            <h3>nickname</h3>
-          </div>
-          <div>
-            <h8>text</h8>
-          </div>
-        </div>
-        <div>
-          <button>
-            <img src="./img/aside_x.PNG" alt="">
-          </button>
-        </div>
-      </div>
-      <div class="searchlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-          <div>
-            <h3>nickname</h3>
-          </div>
-          <div>
-            <h8>text</h8>
-          </div>
-        </div>
-        <div>
-          <button>
-            <img src="./img/aside_x.PNG" alt="">
-          </button>
-        </div>
-      </div>
-      <div class="searchlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-          <div>
-            <h3>nickname</h3>
-          </div>
-          <div>
-            <h8>text</h8>
-          </div>
-        </div>
-        <div>
-          <button>
-            <img src="./img/aside_x.PNG" alt="">
-          </button>
-        </div>
-      </div>
-      <div class="searchlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-          <div>
-            <h3>nickname</h3>
-          </div>
-          <div>
-            <h8>text</h8>
-          </div>
-        </div>
-        <div>
-          <button>
-            <img src="./img/aside_x.PNG" alt="">
-          </button>
-        </div>
-      </div>
-      <div class="searchlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-          <div>
-            <h3>nickname</h3>
-          </div>
-          <div>
-            <h8>text</h8>
-          </div>
-        </div>
-        <div>
-          <button>
-            <img src="./img/aside_x.PNG" alt="">
-          </button>
-        </div>
-      </div>
-      <div class="searchlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-          <div>
-            <h3>nickname</h3>
-          </div>
-          <div>
-            <h8>text</h8>
-          </div>
-        </div>
-        <div>
-          <button>
-            <img src="./img/aside_x.PNG" alt="">
-          </button>
-        </div>
-      </div>
-      <div class="searchlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-          <div>
-            <h3>nickname</h3>
-          </div>
-          <div>
-            <h8>text</h8>
-          </div>
-        </div>
-        <div>
-          <button>
-            <img src="./img/aside_x.PNG" alt="">
-          </button>
-        </div>
-      </div>
-  </div>
-  <div class="sidealarm">
-      <div>
-          <h2>알림</h2>
-      </div>
-      <div class="alarmlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-            <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-        </div>
-        <div>
-            <img src="./img/aside_x.PNG" alt="">
-        </div>
-      </div>
-      <div class="alarmlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-            <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-        </div>
-        <div>
-            <img src="./img/aside_x.PNG" alt="">
-        </div>
-      </div>
-      <div class="alarmlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-            <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-        </div>
-        <div>
-            <img src="./img/aside_x.PNG" alt="">
-        </div>
-      </div>
-      <div class="alarmlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-            <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-        </div>
-        <div>
-            <img src="./img/aside_x.PNG" alt="">
-        </div>
-      </div>
-      <div class="alarmlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-            <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-        </div>
-        <div>
-            <img src="./img/aside_x.PNG" alt="">
-        </div>
-      </div>
-      <div class="alarmlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-            <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-        </div>
-        <div>
-            <img src="./img/aside_x.PNG" alt="">
-        </div>
-      </div>
-      <div class="alarmlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-            <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-        </div>
-        <div>
-            <img src="./img/aside_x.PNG" alt="">
-        </div>
-      </div>
-      <div class="alarmlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-            <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-        </div>
-        <div>
-            <img src="./img/aside_x.PNG" alt="">
-        </div>
-      </div>
-      <div class="alarmlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-            <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-        </div>
-        <div>
-            <img src="./img/aside_x.PNG" alt="">
-        </div>
-      </div>
-      <div class="alarmlist">
-        <div>
-          <img src="./img/aside_seller_ico.PNG" alt="">
-        </div>
-        <div>
-            <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
-        </div>
-        <div>
-            <img src="./img/aside_x.PNG" alt="">
-        </div>
-      </div>
-  </div>
 
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="searchlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <div>
+            <h3>nickname</h3>
+          </div>
+          <div>
+            <h8>text</h8>
+          </div>
+        </div>
+        <div>
+          <button>
+            <img src="./img/aside_x.PNG" alt="" />
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="sidealarm">
+      <div>
+        <h2>알림</h2>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+      <div class="alarmlist">
+        <div>
+          <img src="./img/aside_seller_ico.PNG" alt="" />
+        </div>
+        <div>
+          <h3>seller님이 회원님의 사진을 좋아합니다.</h3>
+        </div>
+        <div>
+          <img src="./img/aside_x.PNG" alt="" />
+        </div>
+      </div>
+    </div>
 
     <section id="container">
       <!---- 스토리 부분 ---->
@@ -916,59 +916,91 @@
       </section>
     </section>
   </body>
-   
+
   <div id="modal_add_feed" class="modal modal_overlay">
     <div class="modal_window">
-        <div class="modal_title">
-            <div class="modal_title_side"></div>
-            <div> 새 게시물 </div>
-            <div class="modal_title_side">
-                <span id="close_modal" class="close_modal material-icons-outlined" style="font-size: 30px">
-                    close
-                </span>
-            </div>
+      <div class="modal_title">
+        <div class="modal_title_side"></div>
+        <div>새 게시물</div>
+        <div class="modal_title_side">
+          <span
+            id="close_modal"
+            class="close_modal material-icons-outlined"
+            style="font-size: 30px"
+          >
+            close
+          </span>
         </div>
-        <div class="modal_image_upload">
-          <button id="fileButton">
-            <label for="file_upload">컴퓨터에서 선택</label>
-            <input type="file" id="file_upload" accept="image/*" required multiple/>
-          </button>
-
-        </div>
+      </div>
+      <div class="modal_image_upload">
+        <button id="fileButton">
+          <label for="file_upload">컴퓨터에서 선택</label>
+          <input
+            type="file"
+            id="file_upload"
+            accept="image/*"
+            required
+            multiple
+          />
+        </button>
+      </div>
     </div>
-</div>
+  </div>
   <div id="modal_add_feed_content" class="modal modal_overlay_content">
     <div class="modal_window">
-        <div class="modal_title">
-            <div class="modal_title_side"></div>
-            <div style="margin: 5px"> 새 게시물 </div>
-            <div class="modal_title_side">
-                <span id="close_modal_feed" class="close_modal material-icons-outlined" style="font-size: 30px">
-                    close
-                </span>
-            </div>
+      <div class="modal_title">
+        <div class="modal_title_side"></div>
+        <div style="margin: 5px">새 게시물</div>
+        <div class="modal_title_side">
+          <span
+            id="close_modal_feed"
+            class="close_modal material-icons-outlined"
+            style="font-size: 30px"
+          >
+            close
+          </span>
         </div>
-        <div class="modal_image_content">
-            <div id="input_image" class="modal_image_upload_content">
-                <button class="beforeBtn"><img src="./img/arrowL.png" alt=""></button>
-                <button class="afterBtn"><img src="./img/arrowR_8x13.png" alt=""></button>
-            </div>
-            <div class="modal_content_write">
-                <div class="feed_name">
-                    <div class="profile_box">
-                        <img id="input_profile_image" class="profile_img" src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.6435-9/s1080x2048/165180104_277246477102900_6106347261862438192_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=730e14&_nc_ohc=1sN4d8i7rn8AX-7aKYN&_nc_ht=scontent-ssn1-1.xx&oh=5049b7cd176848e330b0f5ea95f28172&oe=615A08D1">
-                    </div>
-                    <span id="input_user_id" class="feed_name_txt"> jin.99 </span>
-                </div>
-                <div style="height: 440px">
-                    <textarea id="input_content" class="feed_content_textarea form-control col-sm-5" rows="10" placeholder="설명을 입력하세요..."></textarea>
-                </div>
-                <div style="width: 100%; text-align: center">
-                    <button id="button_write_feed" type="button" class="btn btn-primary" style="width: 268px"> 공유하기</button>
-                </div>
-            </div>
+      </div>
+      <div class="modal_image_content">
+        <div id="input_image" class="modal_image_upload_content">
+          <button class="beforeBtn">
+            <img src="./img/arrowL.png" alt="" />
+          </button>
+          <button class="afterBtn">
+            <img src="./img/arrowR_8x13.png" alt="" />
+          </button>
         </div>
-
+        <div class="modal_content_write">
+          <div class="feed_name">
+            <div class="profile_box">
+              <img
+                id="input_profile_image"
+                class="profile_img"
+                src="https://scontent-ssn1-1.xx.fbcdn.net/v/t1.6435-9/s1080x2048/165180104_277246477102900_6106347261862438192_n.jpg?_nc_cat=102&ccb=1-5&_nc_sid=730e14&_nc_ohc=1sN4d8i7rn8AX-7aKYN&_nc_ht=scontent-ssn1-1.xx&oh=5049b7cd176848e330b0f5ea95f28172&oe=615A08D1"
+              />
+            </div>
+            <span id="input_user_id" class="feed_name_txt"> jin.99 </span>
+          </div>
+          <div style="height: 440px">
+            <textarea
+              id="input_content"
+              class="feed_content_textarea form-control col-sm-5"
+              rows="10"
+              placeholder="설명을 입력하세요..."
+            ></textarea>
+          </div>
+          <div style="width: 100%; text-align: center">
+            <button
+              id="button_write_feed"
+              type="button"
+              class="btn btn-primary"
+              style="width: 268px"
+            >
+              공유하기
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
 </html>
