--- a/HTML/board/quest copy.html
+++ b/HTML/board/quest copy.html
@@ -838,32 +838,12 @@
     
     </div>
   </div>
-  <section class="quest-screen">
-    <main class="quest-content">
-        <div class="content1">
-            <div class="content2">
-                <div class="content3">
-                    <div class="content4">
-                        <div class="content5">
-                            <div class="content6">
-                                <a class="content7" href="#">
-                                    <div class="content8">
-                                        <div class="content9">
-                                            <img class="content10" src="../profile/img/300x300-1.png" alt="게시물 이미지">
-                                        </div>
-                                        <div class="content11"></div>
-                                    </div>
-                                    <div class="content12">
-                                      <div class="content13"></div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </main>
+  <section>
+    <a href="#">
+      <div>
+        <img src="../profile/img/300x300-1.png" alt="게시물 사진">
+      </div>
+    </a>
   </section>
   </body>
 </html>
